Updated styling. Updated logic where bigger numbers were not being accepted

--- a/index.html
+++ b/index.html
@@ -3,30 +3,73 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     </head>
         <body>
             <div class="main-container">
-                <div class="box display" id="display">display</div>
-                <div class="box all-clear">AC</div>
-                <div class="box clear">C</div>
-                <div class="box mod operation">%</div>
-                <div class="box operation" data-id="/">/</div>
-                <div class="box key" data-id="7">7</div>
-                <div class="box key" data-id="8">8</div>
-                <div class="box key" data-id="9">9</div>
-                <div class="box operation" data-id="*">*</div>
-                <div class="box key" data-id="4">4</div>
-                <div class="box key" data-id="5">5</div>
-                <div class="box key" data-id="6">6</div>
-                <div class="box operation" data-id="+">+</div>
-                <div class="box key" data-id="1">1</div>
-                <div class="box key" data-id="2">2</div>
-                <div class="box key" data-id="3">3</div>
-                <div class="box operation" data-id="-">-</div>
-                <div class="box key" data-id="0">0</div>
-                <div class="box point">.</div>
-                <div class="box negate">+/-</div>
-                <div class="box equal" id="equal">=</div>
+                <div class="dispdiv">
+                    <div class="display" id="display">display</div>
+                </div>
+                <div class="box">
+                    <button class="btn all-clear" id="all-clear">AC</button>
+                </div>
+                <div class="box">
+                    <button class="btn clear">C</button>
+                </div>
+                <div class="box">
+                    <button class="btn operation">%</button>
+                </div>
+                <div class="box">
+                    <button class="btn operation">/</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">7</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">8</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">9</button>
+                </div>
+                <div class="box">
+                    <button class="btn operation">x</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">4</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">5</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">6</button>
+                </div>
+                <div class="box">
+                    <button class="btn operation">+</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">1</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">2</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">3</button>
+                </div>
+                <div class="box">
+                    <button class="btn operation">-</button>
+                </div>
+                <div class="box">
+                    <button class="btn key">0</button>
+                </div>
+                <div class="box">
+                    <button class="btn point">.</button>
+                </div>
+                <div class="box">
+                    <button class="btn negate">+/-</button>
+                </div>
+                <div class="box">
+                    <button class="btn equal" id="equal">=</button>
+                </div>
             </div>
             <script src="script.js"></script>
 
