Added functionality to negate and decimal point. Also added code to prevent display overshot.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <body>
             <div class="main-container">
                 <div class="dispdiv">
-                    <div class="display" id="display">display</div>
+                    <div class="display" id="display">0</div>
                 </div>
                 <div class="box">
                     <button class="btn all-clear" id="all-clear">AC</button>
                 </div>
                 <div class="box">
-                    <button class="btn clear">C</button>
+                    <button class="btn clear" id="clear">C</button>
                 </div>
                 <div class="box">
                     <button class="btn operation">%</button>
@@ -62,10 +62,10 @@
                     <button class="btn key">0</button>
                 </div>
                 <div class="box">
-                    <button class="btn point">.</button>
+                    <button class="btn point" id="point">.</button>
                 </div>
                 <div class="box">
-                    <button class="btn negate">+/-</button>
+                    <button class="btn negate" id="negate">+/-</button>
                 </div>
                 <div class="box">
                     <button class="btn equal" id="equal">=</button>
